css/styles.css
/* ... */
.project {
  position: relative;
  border-radius: 8px;
  overflow: hidden;
}

.project__img {
  width: 100%;
}

.project__metadata {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--color-black);
  opacity: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  transition: all 250ms ease-in;
  transform: translateY(-10px);
}

.project__metadata:hover {
  opacity: 0.8;
  transform: translateY(0px);
}

.project__title::after {
  content: '';
  display: block;
  position: relative;
  left: 50%;
  transform: translateX(-50%);
  margin: 0.5rem 0;
  width: 50px;
  /* width: 100%; */
  height: 2px;
  background-color: var(--color-accent);
}

/* Testimonial */
.testimonials {
  margin: 3rem;
}

.testimonial {
  display: flex;
  gap: 2rem;
  align-items: center;
  margin-bottom: 2rem;
}

.testimonial:nth-child(even) .testimonial__img {
  order: 1;
}

.testimonial__img {
  width: 150px;
  height: 150px;
  border-radius: 100%;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.testimonial__bubble {
  padding: 1rem;
  border-radius: 8px;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.testimonials__bubble__name {
  color: var(--color-accent);
  font-weight: bold;
  filter: brightness(70%);
}

/* Arrow-up */
.arrow-up {
  background-color: var(--color-primary);
  position: fixed;
  bottom: 3rem;
  right: 3rem;
  font-size: 3rem;
  width: 4.5rem;
  height: 4.5rem;
  border-radius: 100%;
  text-align: center;
  box-shadow: 5px 5px 0px 0px var(--color-accent);
  transition: opacity 300ms ease-in;
}
.fa-arrow-up {
  color: white;
}

/* Footer */
#contact {
  position: relative;
  background-color: var(--color-primary);
  color: var(--color-text);
}

#contact::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% + 1.3px);
  height: 77px;
  overflow: hidden;
  line-height: 0;
  background-color: var(--color-white);
  mask: var(--divider-arrow);
  -webkit-mask: var(--divider-arrow);
  mask-size: 100% 100%;
}

.contact__links {
  display: flex;
  justify-content: center;
  gap: 1rem;
  padding: 1rem;
  font-size: 2rem;
}
.contact__link {
  transition: color 250ms ease-in;
}
.contact__link:hover {
  color: var(--color-accent);
}

@media screen and (max-width: 768px) {
  .section {
    padding: 4rem 2rem;
  }
  .title {
    font-size: 2rem;
  }
  .description {
    font-size: 1rem;
  }

  .header {
    flex-direction: column;
    background-color: var(--color-primary);
    align-items: start;
  }

  .header__toggle {
    display: block;
  }

  .header__menu {
    display: none;
    flex-direction: column;
    text-align: center;
    /* padding: 1rem 4rem; */
    margin: 1rem 4rem;
    gap: 1rem;
  }

  .header__menu.open {
    display: flex;
  }

  .header__nav {
    width: 100%;
  }

  #home {
    padding-bottom: 3rem;
    transform: translateY(-100px);
  }

  .home__container {
    flex-direction: column;
    align-items: center;
  }

  .home__descriptions {
    margin-top: 6rem;
    font-size: 1rem;
  }

  .home__avatar {
    width: 300px;
    height: 300px;
  }

  .home__title {
    height: 16rem;
    font-size: 2.5rem;
    font-size: 2.2rem;
  }

  .majors {
    flex-direction: column;
    align-items: center;
  }

  .major {
    /* ellie: 25rem */
    max-width: 23rem;
  }

  .job {
    justify-content: center;
  }
  .skills {
    grid-template-columns: 1fr;
  }

  .categories {
    flex-direction: column;
  }

  .category {
    width: 100%;
  }

  .projects {
    grid-template-columns: repeat(2, 1fr);
  }

  .testimonial {
    flex-direction: column;
  }

  .testimonial:nth-child(even) .testimonial__img {
    order: 0;
  }

  .arrow-up {
    font-size: 2rem;
    width: 3rem;
    height: 3rem;
    bottom: 1.5rem;
    right: 1.5rem;
  }
}

